# clash

./: CHANGELOG.md  CLAUDE.md  README.md  aca  aca.ini  emby.list  llms-full.txt  llms.txt  marketplace.json  mx.ini  ouo.ini  pikpak.list  pyproject.toml  server.json  直连.list  起飞.list
docs/plans/: 2026-02-22-git-history-ingestion-design.md
src/gnosis_mcp/: __init__.py  backend.py  cli.py  config.py  embed.py  ingest.py  pg_backend.py  rest.py  server.py  sqlite_backend.py
src/gnosis_mcp/parsers/: __init__.py  git_history.py
tests/: test_embed.py  test_git_history.py  test_ingest.py  test_rest.py  test_server.py  test_sqlite_backend.py
tests/bench/: bench_search.py
tests/eval/: README.md  cases.json  test_search_quality.py
