[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gnosis-mcp"
version = "0.9.1"
description = "Zero-config MCP server for searchable documentation (SQLite default, PostgreSQL optional)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Nicholas Glazer", email = "info@nicgl.com" }]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "documentation",
    "sqlite",
    "knowledge-base",
    "rag",
    "vector-search",
    "search",
    "ai",
    "llm",
    "claude",
    "cursor",
    "windsurf",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Database",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "mcp>=1.20",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29",
]
embeddings = [
    "onnxruntime>=1.17",
    "tokenizers>=0.15",
    "numpy>=1.24",
    "sqlite-vec>=0.1.1",
]
web = ["httpx>=0.25", "trafilatura>=1.8"]
rst = ["docutils>=0.20"]
pdf = ["pypdf>=4.0"]
formats = ["docutils>=0.20", "pypdf>=4.0"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
gnosis-mcp = "gnosis_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/nicholasglazer/gnosis-mcp"
Repository = "https://github.com/nicholasglazer/gnosis-mcp"
Issues = "https://github.com/nicholasglazer/gnosis-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gnosis_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.pytest.ini_options]
asyncio_mode = "auto"
